--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Tracker app</string>
+
+    <string name="app_"></string>
+    <string name="stay_home">Оставайтесь дома</string>
 </resources>
