Added recyclerView with contacts, added actionBar and more

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="app_"></string>
     <string name="stay_home">Оставайтесь дома</string>
+    <string name="click_to_next">Нажмите чтобы посмотреть подробно</string>
 </resources>
