--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">Tracker app</string>
-
-    <string name="app_"></string>
-    <string name="stay_home">Оставайтесь дома</string>
-    <string name="click_to_next">Нажмите чтобы посмотреть подробно</string>
+    <string name="stay_home">Stay at home</string>
+    <string name="click_to_next">"Click to view details "</string>
     <string name="test_mode_str">Test mode</string>
     <string name="settings_str">Settings</string>
+
+
+
+    <string name="hints_testmode_name_label">Name</string>
 </resources>
